2020-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.15
	* configure: Idem

	* src/cache.cc: Converted several casts to memcpy() call to appease ubsan
	* src/hasg.cc: Idem
	* src/simple_label.cc: Idem

	* .Rbuildignore: Skip inst/test/train-sets/0002.dat for smaller package
	* test/test5.r: Idem
	* test/test6.r: Idem
	* test/test7.r: Idem
	* test/test8.r: Idem

2020-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/sender.cc: Renamed variable from 'thread' to 'threads' to not
	confuse poor Solaris, and make it 'extern' while we are at it

2020-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.14

	* DESCRIPTION (URL): Updated to https://vowpalwabbit.org/

	* src/vw.cc: Replace obsoleted ftime() calls with gettimeofday() at the
	request of CRAN, thanks to Brian Ripley for the gettimeofday() hint
	* src/bfgs.cc: Idem
	* src/accumulate.cc: Idem

	* configure.ac: Renamed from configure.in, also retired long-obsolete Rcpp
	linker flags check, commented out two more lines
	* configure: Regenerated

	* README.md: Add 'last commit' badge, also mention rvw-org/rvw and
	vowpalwabbit.org

	* .travis.yml: Switch to 'bionic' and R 4.0.0

2019-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Use name without email as in other packages

2019-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.13

	* DESCRIPTION: Set 'StagedInstall: no' to accomodate R 3.6.0

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Minor update

2018-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.12

	* src/active_interactor.cc: Minor edit to squash g++ warning
	* src/bfgs.cc: Idem

2018-01-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/test1.r: Output written by -f to be witin tempdir() [CRAN]
	* tests/test5.r: Idem
	* tests/test7.r: Idem
	* demo/vw.R: Idem
	* man/vw.Rd: Idem (in example)
