@@ -1,4 +1,4 @@
-.travis.yml
+^\.travis\.yml
 ^.*\.tar\.gz$
 ^local
 tests/test5.r
@@ -6,3 +6,4 @@ tests/test6.r
 tests/test7.r
 tests/test8.r
 inst/test/train-sets/0002.dat
+^\.github
